--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,18 +1,20 @@
 [versions]
 androidGradle = "8.9.0"
-androidxAppcompat = "1.4.0"
+androidxAppcompat = "1.7.0"
 constraintlayout = "2.1.2"
-androidxCore = "1.7.0"
-kotlin = "1.9.24"
-ksp = "1.9.24-1.0.20"
-kotlinxCoroutines = "1.5.2"
-androidxLifecycle = "2.4.0"
+androidxCore = "1.15.0"
+kotlin = "2.1.10"
+ksp = "2.1.10-1.0.31"
+kotlinxCoroutines = "1.9.0"
+androidxLifecycle = "2.8.7"
 okhttp3LoggingInterceptor = "4.9.0"
-material = "1.4.0"
+material = "1.12.0"
 androidxPaging = "3.3.6"
 recyclerview = "1.2.1"
 androidxRoom = "2.6.1"
 retrofit = "2.9.0"
+activityCompose = "1.10.1"
+composeBom = "2025.03.01"
 
 [libraries]
 androidx-lifecycle-livedata-ktx = { module = "androidx.lifecycle:lifecycle-livedata-ktx", version.ref = "androidxLifecycle" }
@@ -35,11 +37,21 @@ material = { module = "com.google.android.material:material", version.ref = "mat
 recyclerview = { module = "androidx.recyclerview:recyclerview", version.ref = "recyclerview" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 retrofit-mock = { module = "com.squareup.retrofit2:retrofit-mock", version.ref = "retrofit" }
+androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activityCompose" }
+androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "composeBom" }
+androidx-ui = { group = "androidx.compose.ui", name = "ui" }
+androidx-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
+androidx-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
+androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
+androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
+androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
+androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "androidGradle" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 androidx-room = { id = "androidx.room", version.ref = "androidxRoom" }
 devtools-ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
+kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 
 [bundles]
