--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -58,6 +58,12 @@ androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
 
 [plugins]
+# Convention Plugins
+projectAndroidApplication = { id = "project.android.application", version = "unspecified" }
+projectAndroidLibrary = { id = "project.android.library", version = "unspecified" }
+projectJvmLibrary = { id = "project.jvm.library", version = "unspecified" }
+# Convention Plugins ##
+
 androidApplication = { id = "com.android.application", version.ref = "androidGradle" }
 kotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 androidxRoom = { id = "androidx.room", version.ref = "androidxRoom" }
