--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -63,6 +63,7 @@ compose-material3 = { group = "androidx.compose.material3", name = "material3" }
 projectAndroidApplication = { id = "project.android.application", version = "unspecified" }
 projectAndroidApplicationCompose = { id = "project.android.application.compose", version = "unspecified" }
 projectAndroidLibrary = { id = "project.android.library", version = "unspecified" }
+projectAndroidLibraryCompose = { id = "project.android.library.compose", version = "unspecified" }
 projectJvmLibrary = { id = "project.jvm.library", version = "unspecified" }
 # Convention Plugins ##
 
