Refactor: Implement KtorGithubService
- Added a Ktor-based implementation of the GithubService interface called KtorGithubService.
- Configured Ktor HttpClient in the NetworkModule.
- Marked the Retrofit GithubService.create function as deprecated.
- Added kotlinx.serialization annotations to RepoSearchResponse for compatibility with Ktor.
- Added Ktor dependencies to the module's build.gradle.kts and libs.versions.toml.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -99,3 +99,8 @@ androidLibrary = { id = "com.android.library", version.ref = "androidGradle" }
 kotlinPluginSerialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 
 [bundles]
+ktor = [
+    "ktor-client-content-negotiation",
+    "ktor-client-core",
+    "ktor-serialization-kotlinx-json",
+]
