--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,8 +1,8 @@
 [versions]
 androidGradle = "8.10.0"
 androidTools = "31.10.0" # Must match androidGradle
-kotlin = "2.1.20"
-ksp = "2.1.20-2.0.1"
+kotlin = "2.1.21-RC2"
+ksp = "2.1.21-RC2-2.0.1"
 androidxAppcompat = "1.7.0"
 constraintlayout = "2.1.2"
 androidxCore = "1.16.0"
