Added KMP Android Library and KMP Android Platform Library Convention Plugins
- Introduced `KmpAndroidLibraryConventionPlugin` for setting up KMP projects with an Android library target.
  - Applies base KMP and Android KMP library plugins.
  - Configures Android library target with default SDK versions.
- Introduced `KmpAndroidPlatformLibraryConventionPlugin` for KMP Android platform library modules.
  - Applies KMP and standard Android library conventions.
  - Configures the Kotlin Multiplatform Extension with an Android target.
  - Sets up Android testing and consumer Proguard rules.
- Updated `build.gradle.kts` to register the new convention plugins.
- Added new plugin aliases to `libs.versions.toml`.
- Extended `ProjectPlugin.kt` to include new plugin identifiers for Android KMP library and KMP conventions.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -94,6 +94,8 @@ projectAndroidLibrary = { id = "project.android.library", version = "unspecified
 projectAndroidLibraryCompose = { id = "project.android.library.compose", version = "unspecified" }
 projectJvmLibrary = { id = "project.jvm.library", version = "unspecified" }
 projectKmp = { id = "project.kmp", version = "unspecified" }
+projectKmpAndroidLibrary = { id = "project.kmp.android.library", version = "unspecified" }
+projectKmpAndroidPlatformLibrary = { id = "project.kmp.android.library.platform", version = "unspecified" }
 # Convention Plugins ##
 
 androidApplication = { id = "com.android.application", version.ref = "androidGradle" }
