--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -95,6 +95,7 @@ projectAndroidLibrary = { id = "project.android.library", version = "unspecified
 projectAndroidLibraryCompose = { id = "project.android.library.compose", version = "unspecified" }
 projectJvmLibrary = { id = "project.jvm.library", version = "unspecified" }
 projectKmp = { id = "project.kmp", version = "unspecified" }
+projectCmp = { id = "project.cmp", version = "unspecified" }
 projectKmpAndroidLibrary = { id = "project.kmp.android.library", version = "unspecified" }
 projectKmpAndroidPlatformLibrary = { id = "project.kmp.android.library.platform", version = "unspecified" }
 # Convention Plugins ##
