--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,8 +1,8 @@
 [versions]
 androidGradle = "8.10.0"
 androidTools = "31.10.0" # Must match androidGradle
-kotlin = "2.1.21-RC2"
-ksp = "2.1.21-RC2-2.0.1"
+kotlin = "2.1.21"
+ksp = "2.1.21-2.0.1"
 androidxAppcompat = "1.7.0"
 constraintlayout = "2.1.2"
 androidxCore = "1.16.0"
@@ -18,7 +18,7 @@ androidxSqlite = "2.5.1"
 retrofit = "2.9.0"
 activityCompose = "1.10.1"
 composeBom = "2025.05.00"
-composeMultiplatform = "1.7.3"
+composeMultiplatform = "1.8.1"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
